feat: Explored data correlations between different stocks

--- a/time_series/00_obtaining_financial_data.ipynb
+++ b/time_series/00_obtaining_financial_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# exploratory notebook\n",
+    "# 00 obtaining financial data\n",
     "This notebook is used for initial exploration on grabbing financial data using pandas_datareader."
    ]
   },
@@ -19,7 +19,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -177,9 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## digging into AAPL\n",
     "Below we'll explore the AAPL pricing data."
